Jetty 11 support
Signed-off-by: Andriy Redko <drreta@gmail.com>